2007-06-12  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel-scaling-image.c:
	(mb_panel_scaling_image_init),
	(mb_panel_scaling_image_set_property),
	(mb_panel_scaling_image_get_property),
	(mb_panel_scaling_image_dispose),
	(mb_panel_scaling_image_finalize), (reload_icon),
	(icon_theme_changed_cb), (mb_panel_scaling_image_realize),
	(mb_panel_scaling_image_unrealize),
	(mb_panel_scaling_image_screen_changed),
	(mb_panel_scaling_image_class_init), (mb_panel_scaling_image_new),
	(mb_panel_scaling_image_set_icon),
	(mb_panel_scaling_image_get_icon):
	* matchbox-panel/mb-panel-scaling-image.h:

	Added 'caching' property for caching undisplayed pixbufs.

2007-04-17  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (screen_changed_cb):

	Commented vile code. :)

2007-04-17  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (rebuild_menu),
	(position_menu), (toggled_cb):
	Destroy menu on selection-done.

2007-04-17  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (rebuild_menu),
	(menu_hide_cb), (filter_func), (mb_panel_applet_create):
	Fix indent ..

2007-04-15  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Don't fetch window icons if they won't be displayed.

2007-04-14  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Set no relief.

2007-04-14  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Quick hack to replace the menu bar with a toggle button.  This
	isn't finished and leaks, but it works around the weird theme bug.

2007-04-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Use the scaling image widget.

2007-04-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/mb-applet-windowselector.png:
	Update with Sato icon.

2007-04-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c: