@@ -1,0 +1,11 @@
+imagedir = $(pkgdatadir)/startup
+image_DATA = hourglass-0.png        \
+	     hourglass-1.png         \
+	     hourglass-2.png         \
+	     hourglass-3.png         \
+	     hourglass-4.png         \
+	     hourglass-5.png         \
+	     hourglass-6.png         \
+	     hourglass-7.png
+
+MAINTAINERCLEANFILES = Makefile.in
